corrected alignment of headers within the hero; added details to the card-wrapper in html

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -8,11 +8,16 @@ body {
   background-size: cover;
   height: 25rem;
   color: #f1faee;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .activities {
   display: flex;
   justify-content: space-evenly;
+  height: 378px;
+  line-height: 18px;
 }
 
 .highlights {
